--- a/arceos/ulib/axstd/Cargo.toml
+++ b/arceos/ulib/axstd/Cargo.toml
@@ -79,4 +79,5 @@ axfeat = { workspace = true }
 arceos_api = { workspace = true }
 axio = "0.1"
 axerrno = "0.1"
+hashbrown = "0.15.2"
 kspin = "0.1"
